--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@asymmetrik/ngx-leaflet": "^4.0.0",
     "@fortawesome/angular-fontawesome": "^0.2.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@types/leaflet": "^1.2.14",
     "core-js": "^2.5.4",
-    "leaflet": "^1.3.4",
+    "ng5-slider": "^1.1.13",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
