--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "core-js": "^2.5.4",
     "ng5-slider": "^1.1.13",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
