--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@tinkoff/ng-dompurify": "^3.0.0",
+    "dompurify": "^2.1.1",
     "ng5-slider": "^1.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
