--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "baccanale-upgrade": {
+    "baccanale": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/baccanale-upgrade",
+            "outputPath": "dist/baccanale",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "baccanale-upgrade:build"
+            "browserTarget": "baccanale:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "baccanale-upgrade:build:production"
+              "browserTarget": "baccanale:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "baccanale-upgrade:build"
+            "browserTarget": "baccanale:build"
           }
         },
         "test": {
@@ -115,15 +115,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "baccanale-upgrade:serve"
+            "devServerTarget": "baccanale:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "baccanale-upgrade:serve:production"
+              "devServerTarget": "baccanale:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "baccanale-upgrade"
+    }
+  },
+  "defaultProject": "baccanale"
 }
